[package]
name = "harvest"
version = "0.1.0"
authors = ["laik <laik.lj@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.common]
path = "./common"

[dependencies.db]
path = "./db"

[dependencies.scan]
path = "./scan"

[dependencies.event]
path = "./event"

[dependencies.output]
path = "./output"

[dependencies.file]
path = "./file"

[dependencies]
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = "1.0.123"
sse-client = "1.1.1"
serde_json = "1.0.62"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.0"
strum = { version = "0.20", features = ["derive"] }
async-std = "1.9.0"


# [target.x86_64-unknown-linux-musl]
# linker = "x86_64-linux-musl-gcc"