[package]
name = "db"
version = "0.1.0"
authors = ["laik <laik.lj@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.common]
path = "../common"

[dependencies.event]
path = "../event"

[dependencies]
strum = { version = "0.20", features = ["derive"] }
serde = "1.0.123"
serde_json = "1.0.62"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.0"
async-std = "1.9.0"