[package]
name = "file"
version = "0.1.0"
authors = ["laik <laik.lj@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.common]
path = "../common"

[dependencies.db]
path = "../db"

[dependencies.output]
path = "../output"

[dependencies.event]
path = "../event"

[dependencies]
serde_json = "1.0.62"
crossbeam-channel = "0.5.0"
async-std = "1.9.0"