[package]
name = "scan"
version = "0.1.0"
authors = ["laik <laik.lj@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.common]
path = "../common"

[dependencies.event]
path = "../event"

[dependencies.db]
path = "../db"

[dependencies]
crossbeam-channel = "0.5.0"
notify = "4.0.15"
strum = { version = "0.20", features = ["derive"] }
walkdir = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"